--- a/phone/manifest.json
+++ b/phone/manifest.json
@@ -1,21 +1,21 @@
 {
-  "name": "Список контактов 2.0 | ООО \"Невский ССЗ\"",
-  "short_name": "Контакты НССЗ",
-  "description": "Список контактов для ООО \"Невский ССЗ\"",
-  "start_url": "file:///D:\SOFT\Phone\2.0.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "Список контактов Невского ССЗ",
+    "short_name": "Контакты НССЗ",
+    "description": "Список контактов ООО «Невский ССЗ»",
+    "start_url": "/index.html",
+    "display": "standalone",
+    "background_color": "#f8fafc",
+    "theme_color": "#2563eb",
+    "icons": [
+        {
+            "src": "logo.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "logo.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
