--- a/phone/manifest.json
+++ b/phone/manifest.json
@@ -2,7 +2,7 @@
     "name": "Список контактов Невского ССЗ",
     "short_name": "Контакты НССЗ",
     "description": "Список контактов ООО «Невский ССЗ»",
-    "start_url": "/index.html",
+    "start_url": "/phone/index.html",
     "display": "standalone",
     "background_color": "#f8fafc",
     "theme_color": "#2563eb",
