--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#1f2937",
   "theme_color": "#3b82f6",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [
     {
       "src": "img/logo.svg?v=3",
